src/adapters/tui/widgets/snapshots/rustain__adapters__tui__widgets__agent_inspector__tests__snapshot_inspector_kill_confirm.snap
---
source: src/adapters/tui/widgets/agent_inspector.rs
expression: text
---
┌ Agent Inspector · reviewer ──────────────────────────────┐
│Agent: reviewer                                           │
│Model: (unknown — Story 10.7)                             │
│Tools: (pending — Story 10.7)                             │
│Spawned: 494h 27m 21s ago                                 │
│                                                          │
│Current task:                                             │
│(no output yet)                                           │
│                                                          │
│Resource usage:                                           │
│  Tokens: (pending — Story 10.7)                          │
│  Cost: (pending — Story 10.7)                            │
│  Turns: (pending — Story 10.7)                           │
│  Memory: (n/a — in-process tier)                         │
│                                                          │
│Children:                                                 │
│  (none)                                                  │
│                                                          │
│Conversation tail:                                        │
└──────────────────────────────────────────────────────────┘
