src/adapters/tui/widgets/snapshots/rustain__adapters__tui__widgets__agent_inspector__tests__snapshot_inspector_running_with_tail.snap
---
source: src/adapters/tui/widgets/agent_inspector.rs
expression: text
---
┌ Agent Inspector · coder ─────────────────────────────────┐
│Agent: coder                                              │
│Model: (unknown — Story 10.7)                             │
│Tools: (pending — Story 10.7)                             │
│Spawned: 2h 0m 0s ago                                     │
│                                                          │
│Current task:                                             │
│hello                                                     │
│world                                                     │
│working...                                                │
│                                                          │
│Resource usage:                                           │
│  Tokens: (pending — Story 10.7)                          │
│  Cost: (pending — Story 10.7)                            │
│  Turns: (pending — Story 10.7)                           │
│  Memory: (n/a — in-process tier)                         │
│                                                          │
│Children:                                                 │
│  (none)                                                  │
└──────────────────────────────────────────────────────────┘
